# regime-radar

./: README.md  main.py  pyproject.toml
docs/: math.md
regime_radar/: __init__.py  cli.py  data.py  model.py  plotting.py  report.py
reports/: aapl_regimes.json
