[project]
name = "regime-radar"
version = "0.1.0"
description = "CLI tool for detecting statistical regime shifts in financial time series."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "typer>=0.20.0",
    "yfinance>=0.2.66",
]

[project.scripts]
regime-radar = "regime_radar.cli:main"